finished most part of project

--- a/index.html
+++ b/index.html
@@ -108,68 +108,426 @@
         </div>
       </section>
 
-      <section id="projects">
+      <section id="work">
         <div class="section-container">
-          <h2>👩🏽‍🚀 Projects</h2>
+          <h2>🌮 Work Experience</h2>
 
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-
-          <h2>🏆 Accomplishments</h2>
-
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
+          <div class="my-3">
+            <h3 class="d-inline">University of Florida</h3>
+            <h5 class="d-inline" style="float: right">Gainesville, Florida</h5>
+          </div>
+          <div class="my-1">
+            <h4 class="d-inline fw-bolder">Dev Lead</h4>
+            <p class="d-inline" style="float: right">
+              <i>June 2021 - Current</i>
+            </p>
+          </div>
+          <div class="my-3">
+            <p class="my-0">
+              - Leading development team to build a
+              <b>Cloud Arduino IDE</b> under Dr. Christina Gardner-McCune in
+              Engaging Learning Lab.
+            </p>
+            <p>
+              - Managing web app scalability for classroom deployment to serve
+              10+ elementary schools and <b>200+</b> 3rd to 5th grade students.
+            </p>
+          </div>
+          <div class="my-1">
+            <h4 class="d-inline fw-bolder">Backend Developer</h4>
+            <p class="d-inline" style="float: right">
+              <i>Feb 2021 - June 2021</i>
+            </p>
+          </div>
+          <div class="my-3">
+            <p class="my-0">
+              - Built and maintained <b>headless CMS</b> of an interactive
+              Arduino IDE Web App using <b>Strapi</b>.
+            </p>
+            <p class="my-0">
+              - Remodeled compile server event listener to allow horizontal
+              scaling and improved compile speed by <b>30%</b>.
+            </p>
+            <p>
+              - Implemented Web Serial API to allow users to connect their USB
+              and Bluetooth devices to the App.
+            </p>
+          </div>
+          <p class="text-muted mt-4 mb-2"></p>
         </div>
       </section>
 
-      <section id="work">
-        <div class="section-container">
-          <h2>🌮 Work History</h2>
-
-          <h3>McDonalds</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-          <h3>Burger King</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-          <h3>Taco Bell</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
+      <section id="projects">
+        <div
+          class="section-container d-flex flex-column justify-content-evenly"
+        >
+          <h2>👩🏽‍🚀 Projects</h2>
+          <div class="my-3">
+            <b>
+              CaSMM - Computation and Science Modeling through Making Full Stack
+              Web App</b
+            >
+            <div
+              id="carouselExampleIndicators"
+              class="carousel"
+              data-bs-interval="false"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="./CaSMM.PNG"
+                    class="d-block w-100"
+                    alt="CaSMM project"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <div
+                    class="
+                      container-fluid
+                      w-100
+                      d-flex
+                      flex-column
+                      justify-content-evenly
+                    "
+                    style="
+                      height: 21.3vw;
+                      background-color: rgba(166, 227, 247, 0.4);
+                    "
+                  >
+                    <p>
+                      CASMM, or Computation and Science Modeling through Making,
+                      is a cloud-based programming interface designed for fifth
+                      and sixth grade students to support them in building
+                      computational physical models for science experiments in
+                      the classroom.
+                    </p>
+                    <p>
+                      CASMM is developed by the University of Florida and Texas
+                      A&M University with support from the National Science
+                      Foundation.
+                    </p>
+                    <p>
+                      CASMM makes use of Google's Blockly JavaScript library to
+                      build a block based visual programming editor within our
+                      user interface. Programs created through the visual
+                      programming editor can be compiled into Arduino executable
+                      code and uploaded directly onto a students Arduino. These
+                      programs, once uploaded to the student's Arduino, provide
+                      support in performing a corresponding science project in
+                      the classroom.
+                    </p>
+                    <a href="https://casmm-staging.herokuapp.com/"
+                      >https://casmm-staging.herokuapp.com/</a
+                    >
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div
+                    class="
+                      container
+                      w-100
+                      d-flex
+                      flex-column
+                      justify-content-evenly
+                    "
+                    style="
+                      height: 21.3vw;
+                      background-color: rgba(166, 227, 247, 0.4);
+                    "
+                  >
+                    <h4>Frontend: React, Blockly</h4>
+                    <h4>Backend: Node.js, Strapi, PostgresSQL</h4>
+                    <h4>Compile Server: Arduino, Redis, Bull</h4>
+                    <h4>
+                      Architecture: Docker, docker-compose, Github Action,
+                      Heroku
+                    </h4>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <button
+                  type="button"
+                  data-bs-target="#carouselExampleIndicators"
+                  data-bs-slide-to="0"
+                  class="active btn btn-light"
+                  aria-current="true"
+                  aria-label="Slide 1"
+                >
+                  Project
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-light"
+                  data-bs-target="#carouselExampleIndicators"
+                  data-bs-slide-to="1"
+                  aria-label="Slide 2"
+                >
+                  Description
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-light"
+                  data-bs-target="#carouselExampleIndicators"
+                  data-bs-slide-to="2"
+                  aria-label="Slide 3"
+                >
+                  Technology Used
+                </button>
+                <a
+                  class="btn btn-light"
+                  href="https://github.com/STEM-C/CaSMM"
+                  role="button"
+                  >Check it out on Github</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="my-3">
+            <b>
+              MicroTick - Full-Stack Ticketing App with Event-Based
+              Microservices Architecture</b
+            >
+            <div
+              id="carouselExampleIndicators2"
+              class="carousel"
+              data-bs-interval="false"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="./microtick.PNG"
+                    class="d-block w-100"
+                    alt="microtick project"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <div
+                    class="
+                      container-fluid
+                      w-100
+                      d-flex
+                      flex-column
+                      justify-content-evenly
+                    "
+                    style="
+                      height: 27.5vw;
+                      background-color: rgba(166, 227, 247, 0.4);
+                    "
+                  >
+                    <p>
+                      CASMM, or Computation and Science Modeling through Making,
+                      is a cloud-based programming interface designed for fifth
+                      and sixth grade students to support them in building
+                      computational physical models for science experiments in
+                      the classroom.
+                    </p>
+                    <p>
+                      CASMM is developed by the University of Florida and Texas
+                      A&M University with support from the National Science
+                      Foundation.
+                    </p>
+                    <p>
+                      CASMM makes use of Google's Blockly JavaScript library to
+                      build a block based visual programming editor within our
+                      user interface. Programs created through the visual
+                      programming editor can be compiled into Arduino executable
+                      code and uploaded directly onto a students Arduino. These
+                      programs, once uploaded to the student's Arduino, provide
+                      support in performing a corresponding science project in
+                      the classroom.
+                    </p>
+                    <a href="https://casmm-staging.herokuapp.com/"
+                      >https://casmm-staging.herokuapp.com/</a
+                    >
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div
+                    class="
+                      container
+                      w-100
+                      d-flex
+                      flex-column
+                      justify-content-evenly
+                    "
+                    style="
+                      height: 27.5vw;
+                      background-color: rgba(166, 227, 247, 0.4);
+                    "
+                  >
+                    <h4>Frontend: React, Blockly</h4>
+                    <h4>Backend: Node.js, Strapi, PostgresSQL</h4>
+                    <h4>Compile Server: Arduino, Redis, Bull</h4>
+                    <h4>
+                      Architecture: Docker, docker-compose, Github Action,
+                      Heroku
+                    </h4>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <button
+                  type="button"
+                  data-bs-target="#carouselExampleIndicators2"
+                  data-bs-slide-to="0"
+                  class="active btn btn-light"
+                  aria-current="true"
+                  aria-label="Slide 1"
+                >
+                  Project
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-light"
+                  data-bs-target="#carouselExampleIndicators2"
+                  data-bs-slide-to="1"
+                  aria-label="Slide 2"
+                >
+                  Description
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-light"
+                  data-bs-target="#carouselExampleIndicators2"
+                  data-bs-slide-to="2"
+                  aria-label="Slide 3"
+                >
+                  Technology Used
+                </button>
+                <a
+                  class="btn btn-light"
+                  href="https://github.com/syuchen1/microtick"
+                  role="button"
+                  >Check it out on Github</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="my-3">
+            <b>
+              Shoppingfy - MERN Stack E-Commerce App with Production-grade
+              Workflow</b
+            >
+            <div
+              id="carouselExampleIndicators3"
+              class="carousel"
+              data-bs-interval="false"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="./CaSMM.PNG"
+                    class="d-block w-100"
+                    alt="CaSMM project"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <div
+                    class="
+                      container-fluid
+                      w-100
+                      d-flex
+                      flex-column
+                      justify-content-evenly
+                    "
+                    style="
+                      height: 21.3vw;
+                      background-color: rgba(166, 227, 247, 0.4);
+                    "
+                  >
+                    <p>
+                      CASMM, or Computation and Science Modeling through Making,
+                      is a cloud-based programming interface designed for fifth
+                      and sixth grade students to support them in building
+                      computational physical models for science experiments in
+                      the classroom.
+                    </p>
+                    <p>
+                      CASMM is developed by the University of Florida and Texas
+                      A&M University with support from the National Science
+                      Foundation.
+                    </p>
+                    <p>
+                      CASMM makes use of Google's Blockly JavaScript library to
+                      build a block based visual programming editor within our
+                      user interface. Programs created through the visual
+                      programming editor can be compiled into Arduino executable
+                      code and uploaded directly onto a students Arduino. These
+                      programs, once uploaded to the student's Arduino, provide
+                      support in performing a corresponding science project in
+                      the classroom.
+                    </p>
+                    <a href="https://casmm-staging.herokuapp.com/"
+                      >https://casmm-staging.herokuapp.com/</a
+                    >
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div
+                    class="
+                      container
+                      w-100
+                      d-flex
+                      flex-column
+                      justify-content-evenly
+                    "
+                    style="
+                      height: 21.3vw;
+                      background-color: rgba(166, 227, 247, 0.4);
+                    "
+                  >
+                    <h4>Frontend: React, Blockly</h4>
+                    <h4>Backend: Node.js, Strapi, PostgresSQL</h4>
+                    <h4>Compile Server: Arduino, Redis, Bull</h4>
+                    <h4>
+                      Architecture: Docker, docker-compose, Github Action,
+                      Heroku
+                    </h4>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <button
+                  type="button"
+                  data-bs-target="#carouselExampleIndicators3"
+                  data-bs-slide-to="0"
+                  class="active btn btn-light"
+                  aria-current="true"
+                  aria-label="Slide 1"
+                >
+                  Project
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-light"
+                  data-bs-target="#carouselExampleIndicators3"
+                  data-bs-slide-to="1"
+                  aria-label="Slide 2"
+                >
+                  Description
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-light"
+                  data-bs-target="#carouselExampleIndicators3"
+                  data-bs-slide-to="2"
+                  aria-label="Slide 3"
+                >
+                  Technology Used
+                </button>
+                <a
+                  class="btn btn-light"
+                  href="https://github.com/STEM-C/CaSMM"
+                  role="button"
+                  >Check it out on Github</a
+                >
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
